--- a/iq_quiz.html
+++ b/iq_quiz.html
@@ -10,12 +10,27 @@
 <body>
     <div class="quiz-container">
         <h1>IQ Quiz</h1>
-        <div id="quiz" class="container"></div>
-        <button id="submit-btn">Skicka in</button>
-        <div id="result" class="result-container"></div>
-        <canvas id="iqChart" width="400" height="200"></canvas>
+        <p>Testa din IQ med vårt roliga och utmanande quiz! Du kommer att få 10 frågor med olika svårighetsgrader.</p>
+        <button id="start-btn">Starta</button>
     </div>
-    
+
+    <div id="quiz-popup" class="popup">
+        <div class="popup-content">
+            <div id="timer" class="timer"></div>
+            <div id="quiz" class="container"></div>
+            <button id="next-btn">Nästa</button>
+        </div>
+    </div>
+
+    <div id="result-popup" class="popup">
+        <div class="popup-content">
+            <h2>Resultat</h2>
+            <div id="final-score"></div>
+            <canvas id="iqChart" width="400" height="200"></canvas>
+            <button id="restart-btn">Starta Om</button>
+        </div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
